added recharts scatterchart

--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@ input[type="number"] {
   margin-bottom: 20px;
 }
 
-.data-vis-wrapper {
+/* .data-vis-wrapper {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -145,7 +145,7 @@ input[type="number"] {
 }
 .recharts-surface {
   overflow: visible;
-}
+} */
 
 .login-button {
   color: #494949;
@@ -202,7 +202,7 @@ input[type="number"] {
 
 
 @media only screen and (min-width: 992px) {
-  .data-vis-wrapper {
+  /* .data-vis-wrapper {
     flex-direction: row;
   }
   .data-vis-wrapper .recharts-responsive-container {
@@ -210,6 +210,6 @@ input[type="number"] {
     max-width: 50%;
     min-width: auto;
     margin: 0 auto;
-  }
+  } */
 }
 
