--- a/src/App.css
+++ b/src/App.css
@@ -41,9 +41,9 @@ input[type="number"] {
 }
 
 .CitySearch {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  flex-basis: 300px;
+  flex-basis: 300px; */
   max-width: 300px;
   margin: auto;
   position: relative;
@@ -139,6 +139,7 @@ input[type="number"] {
   align-items: center;
   flex-direction: column;
 }
+
 .data-vis-wrapper .recharts-responsive-container {
   min-width: 100%;
   display: flex;
