--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,18 @@
+$white: #fff;
+$google-blue: #4285f4;
+$button-active-blue: #1669F2;
+$background: #0A1931;
+$secondary-background: #2A3E5E;
+$primary: #185ADB;
+$secondary: #FFC947;
+$off-white: #EFEFEF;
+
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
 .App {
   text-align: center;
   padding: 2% 5%;
+  background-color: $background;
+  color: $off-white;
 }
 
 .App * {
@@ -11,10 +22,6 @@
 ul {
   padding: 0;
   list-style: none;
-}
-
-p {
-  margin: 5px 0;
 }
 
 .display-none {
@@ -40,12 +47,13 @@ input[type="number"] {
   width: 250px;
 }
 
-.CitySearch {
-  /* display: flex;
+.CitySearch,
+.NumberOfEvents {
+  display: flex;
   flex-direction: column;
-  flex-basis: 300px; */
+  flex-basis: 300px; 
   max-width: 300px;
-  margin: auto;
+  margin: 4% auto 3%;
   position: relative;
 }
 
@@ -58,6 +66,7 @@ input[type="number"] {
   top: 43px;
   font-size: 14px;
   box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
+  color: #000;
 }
 
 .suggestions > li {
@@ -76,23 +85,42 @@ input[type="number"] {
   background-color: #bcdcdb;
 }
 
-.event {
+.event-container {
   padding: 10px 10px 35px;
   margin-bottom: 10px;
-  text-align: left;
-  border: 1px solid #ccc;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
+                0 2px 4px rgba(0,0,0,0.07), 
+                0 4px 8px rgba(0,0,0,0.07), 
+                0 8px 16px rgba(0,0,0,0.07),
+                0 16px 32px rgba(0,0,0,0.07), 
+                0 32px 64px rgba(0,0,0,0.07);
+  // border: 1px solid #ccc;
+  background: $secondary-background;
   border-radius: 4px;
   position: relative;
 }
 
-.details-btn {
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  padding: 5px 8px;
-  border-radius: 4px;
-  outline: none;
+.show-hide-btn {
+  display: inline-block;
+  padding: 7px 12px;
+  font-size: 110%;
   cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: $off-white;
+  background-color: $secondary;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 2px #999;
+}
+
+.show-hide-btn:hover {background-color: #ffc847d0}
+
+.show-hide-btn:active {
+  background-color: #ffc8476e;
+  box-shadow: 0 1px #666;
+  transform: translateY(4px);
 }
 
 .name {
@@ -114,11 +142,11 @@ input[type="number"] {
   overflow-x: hidden;
 }
 
-.numberOfEvents {
-  width: 200px;
-  margin: 20px auto;
-  text-align: center;
-}
+// .numberOfEvents {
+//   width: 200px;
+//   margin: 20px auto;
+//   text-align: center;
+// }
 
 .button-wrapper {
   display: grid;
@@ -129,9 +157,9 @@ input[type="number"] {
 }
 
 .Alert {
-  position: fixed;
-  top: 20px;
-  margin-bottom: 20px;
+  position: absolute;
+  bottom: 30px;
+  font-size: 85%;
 }
 
 .data-vis-wrapper {
@@ -148,57 +176,13 @@ input[type="number"] {
   overflow: visible;
 }
 
-.login-button {
-  color: #494949;
-  text-transform: uppercase;
-  text-decoration: none;
-  background: #ffffff;
-  padding: 20px;
-  border: 4px solid #494949;
-  display: inline-block;
-  transition: all 0.4s ease 0s;
-  min-width: 10rem;
-  margin: 1rem;
+
+
+.privacy {
+  padding-bottom: 20px;
+  font-size: 85%;
 }
 
-.google-btn {
-  width: 184px;
-  height: 42px;
-  margin: 1rem;
-  background-color: #4285f4;
-  border-radius: 2px;
-  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
-}
-.google-btn:hover {
-  box-shadow: 0 0 6px #4285f4;
-}
-.google-btn:active {
-  background: #1669f2;
-}
-.google-icon-wrapper {
-  position: absolute;
-  margin-top: 1px;
-  margin-left: 1px;
-  width: 40px;
-  height: 40px;
-  border-radius: 2px;
-  background-color: #fff;
-}
-.google-icon {
-  position: absolute;
-  margin-top: 11px;
-  margin-left: -8px;
-  width: 18px;
-  height: 18px;
-}
-.btn-text {
-  float: right;
-  margin: 11px 11px 0 0;
-  color: #fff;
-  font-size: 14px;
-  letter-spacing: 0.2px;
-  font-family: "Roboto";
-}
 
 
 
