--- a/src/WelcomeScreen.css
+++ b/src/WelcomeScreen.css
@@ -1,9 +1,16 @@
-WelcomeScreen {
-  position: fixed;
+.WelcomeScreen {
   width: 100%;
   height: 100%;
   top: 0;
-  background: white;
+  background: #2A3E5E;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
+                0 2px 4px rgba(0,0,0,0.07), 
+                0 4px 8px rgba(0,0,0,0.07), 
+                0 8px 16px rgba(0,0,0,0.07),
+                0 16px 32px rgba(0,0,0,0.07), 
+                0 32px 64px rgba(0,0,0,0.07);
+  padding-bottom: 1%;
+  border-radius: 4px;
 }
 .login-button {
   color: #494949;
@@ -20,6 +27,7 @@ WelcomeScreen {
   width: 184px;
   height: 42px;
   margin: 1rem;
+  margin-bottom: .2rem;
   background-color: #4285f4;
   border-radius: 2px;
   box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
